--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "debug": "DEBUG=midclan-webapi:* npm start"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.6.8",
     "morgan": "~1.9.1"
   }
 }
