Updated the mongo url

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb://heroku_lrt6r3tx:md64rsngoqneflgib1pkdbel84@ds155577.mlab.com:55577/heroku_lrt6r3tx
+MONGODB_URI=mongodb+srv://midclan-webapi:ZlhdOWq3bzusEMUE@cluster0-zecpa.gcp.mongodb.net/test?retryWrites=true&w=majority
 PORT=8000
