feat: 🎸 fetching users, doctors, pharmacists, technicians
- fetch single user profile, fetch single pharmacist profile, technician
and doctors

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "debug": "DEBUG=midclan-webapi:* npm start",
+    "nodemon": "nodemon npm start"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -19,6 +21,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "locus": "^2.0.1",
     "nodemon": "^1.19.1"
   },
   "engines": {
