feat(controllers): add auth user profile
- add endpoint to get authenticated user profile

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://midclan-webapi:ZlhdOWq3bzusEMUE@cluster0-zecpa.gcp.mongodb.net/test?retryWrites=true&w=majority
 PORT=8000
+JWT_SECRET="grimesbottom"
