--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "cz-conventional-changelog": "^3.0.2",
     "locus": "^2.0.1",
     "nodemon": "^1.19.1"
   },
   "engines": {
     "node": "10.15.3",
     "npm": "6.4.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
