feat(Base64ImageHandler.js): add handler for decoding and saving base64images

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "nodemon": "nodemon npm start"
   },
   "dependencies": {
+    "base64-img": "^1.0.4",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
