--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URI=mongodb+srv://midclan-webapi:ZlhdOWq3bzusEMUE@cluster0-zecpa.gcp.mongodb.net/test?retryWrites=true&w=majority
 PORT=8000
+TEST_PORT=4000
 JWT_SECRET="grimesbottom"
