--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.8",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.0.2",
